添加图片的滤镜效果实例

--- a/app/src/main/res/menu/activity_camera.xml
+++ b/app/src/main/res/menu/activity_camera.xml
@@ -2,6 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/menu_next_curve_filter"
+        android:orderInCategory="100"
+        android:title="@string/menu_next_curve_filter"
+        app:showAsAction="ifRoom|withText" />
+    <item
+        android:id="@+id/menu_next_mixer_filter"
+        android:orderInCategory="100"
+        android:title="@string/menu_next_mixer_filter"
+        app:showAsAction="ifRoom|withText" />
+    <item
+        android:id="@+id/menu_next_convolution_filter"
+        android:orderInCategory="100"
+        android:title="@string/menu_next_convolution_filter"
+        app:showAsAction="ifRoom|withText" />
+    <item
         android:id="@+id/menu_next_camera"
         android:orderInCategory="100"
         android:title="@string/menu_next_camera"
@@ -11,4 +26,5 @@
         android:orderInCategory="100"
         android:title="@string/menu_take_photo"
         app:showAsAction="always|withText" />
+
 </menu>
