--- a/app/src/main/res/menu/activity_camera.xml
+++ b/app/src/main/res/menu/activity_camera.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/menu_next_image_detection_filter"
+        android:orderInCategory="100"
+        android:title="@string/menu_next_image_detection_filter"
+        app:showAsAction="ifRoom|withText" />
+    <item
         android:id="@+id/menu_next_curve_filter"
         android:orderInCategory="100"
         android:title="@string/menu_next_curve_filter"
