--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Second Sight" />
+
+    <Button
+        android:id="@+id/btn_gray"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="图像灰度化" />
 </LinearLayout>
